# yet-another-titanic

./: .gitignore  .pre-commit-config.yaml  data.dvc  infer.py  pyproject.toml  readme.md  setup.cfg  submission.csv  test.yaml  train.py
.dvc/: config
configs/: config.yaml
yet_another_titanic/callbacks/: __init__.py  _mlflow_callback.py
yet_another_titanic/data/: _data.py
yet_another_titanic/preprocessing/: _DataCleaner.py  _Pipeline.py  _SimplePreprocessor.py  __init__.py
yet_another_titanic/utils/: _utils.py
