[tool.poetry]
name = "yet-another-titanic"
version = "0.1.0"
description = ""
authors = ["Sergei Zakharov <thesdzakharov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
catboost = "^1.2.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
