[tool.poetry]
name = "yet-another-titanic"
version = "0.1.0"
description = ""
authors = ["Sergei Zakharov <thesdzakharov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
catboost = "^1.2.2"
pre-commit = "^3.6.0"
dvc = "^3.36.1"
dvc-gdrive = "^3.0.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
mlflow = "^2.9.2"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
skip = ["__init__.py"]
profile = "black"
line_length = 120
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
